--- a/assets/stylesheets/_bootstrap4.scss
+++ b/assets/stylesheets/_bootstrap4.scss
@@ -5,38 +5,38 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
-@import "bootstrap/functions";
-@import "bootstrap/variables";
-@import "bootstrap/mixins";
-@import "bootstrap/root";
-@import "bootstrap/reboot";
-@import "bootstrap/type";
-@import "bootstrap/images";
-@import "bootstrap/code";
-@import "bootstrap/grid";
-@import "bootstrap/tables";
-@import "bootstrap/forms";
-@import "bootstrap/buttons";
-@import "bootstrap/transitions";
-@import "bootstrap/dropdown";
-@import "bootstrap/button-group";
-@import "bootstrap/input-group";
-@import "bootstrap/custom-forms";
-@import "bootstrap/nav";
-@import "bootstrap/navbar";
-@import "bootstrap/card";
-@import "bootstrap/breadcrumb";
-@import "bootstrap/pagination";
-@import "bootstrap/badge";
-@import "bootstrap/jumbotron";
-@import "bootstrap/alert";
-@import "bootstrap/progress";
-@import "bootstrap/media";
-@import "bootstrap/list-group";
-@import "bootstrap/close";
-@import "bootstrap/modal";
-@import "bootstrap/tooltip";
-@import "bootstrap/popover";
-@import "bootstrap/carousel";
-@import "bootstrap/utilities";
-@import "bootstrap/print";
+@import "bootstrap4/functions";
+@import "bootstrap4/variables";
+@import "bootstrap4/mixins";
+@import "bootstrap4/root";
+@import "bootstrap4/reboot";
+@import "bootstrap4/type";
+@import "bootstrap4/images";
+@import "bootstrap4/code";
+@import "bootstrap4/grid";
+@import "bootstrap4/tables";
+@import "bootstrap4/forms";
+@import "bootstrap4/buttons";
+@import "bootstrap4/transitions";
+@import "bootstrap4/dropdown";
+@import "bootstrap4/button-group";
+@import "bootstrap4/input-group";
+@import "bootstrap4/custom-forms";
+@import "bootstrap4/nav";
+@import "bootstrap4/navbar";
+@import "bootstrap4/card";
+@import "bootstrap4/breadcrumb";
+@import "bootstrap4/pagination";
+@import "bootstrap4/badge";
+@import "bootstrap4/jumbotron";
+@import "bootstrap4/alert";
+@import "bootstrap4/progress";
+@import "bootstrap4/media";
+@import "bootstrap4/list-group";
+@import "bootstrap4/close";
+@import "bootstrap4/modal";
+@import "bootstrap4/tooltip";
+@import "bootstrap4/popover";
+@import "bootstrap4/carousel";
+@import "bootstrap4/utilities";
+@import "bootstrap4/print";
